@@ -1,3 +1,7 @@
+Sat Jun 11 18:02:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (io_getc): should be 7bit if ascii.  fixes #4557
+
 Sat Jun 11 16:28:25 2011  Kouhei Sutou  <kou@cozmixng.org>
 
 	* lib/rexml/formatters/pretty.rb
